# tradelayout-backtesting-engine

./: .env.example  .gitignore  ARCHITECTURE.md  AUTOMATION_SUMMARY.md  CONFIGURATION_SUMMARY.md  DATABASE_STORAGE_GUIDE.md  DEPLOYMENT.md  DIAGNOSTIC_FEATURES.md  FILE_STORAGE_API_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LTP_STORE_VERIFICATION.md  OPTION_LTP_INTEGRATION_PLAN.md  PNL_ISSUE_ANALYSIS.md  PNL_ZERO_ISSUE_FINAL_ANALYSIS.md  README.md  README_DEPLOYMENT.md  SHARED_DATA_CACHE_IMPLEMENTATION.md  SQUARE_OFF_IMPLEMENTATION_SUMMARY.md  SQUARE_OFF_NODE_GUIDE.md  STRATEGY_FIX_SUMMARY.md  STRATEGY_TERMINATION_PATHS.md  TRANSACTION_JSON_STRUCTURE.md  UI_DIAGNOSTIC_DATA_GUIDE.md  analyze_0918_condition.py  analyze_strategy.py  automate_full_implementation.sh  backtest_api_db.py  backtest_api_server.py  backtest_dashboard_data.json  backtest_file_api_server.py  backtest_results.json  backtest_strike_loader.py  check_dual_entries.py  check_entry_conditions.py  check_entry_node_status.py  check_exit_reentry.py  check_final_positions.py  check_graph_cycles.py  check_node_states.py  check_node_traversal.py  (+115 more)
_archived_legacy_backtest/: README.md  backtest_config.py  backtest_engine.py  fetch_and_test_strategy.py  run_backtest.py  strategy_executor.py
adapters/: order_placer_impl.py  redis_clickhouse_data_reader.py  redis_clickhouse_data_writer.py
aws/: eventbridge_rules.json  lambda_trigger.py  setup_elastic_ip.sh  shutdown.sh  startup.sh
db/: schema.sql  schema_simple.sql
deploy/: deploy.sh
indicators/: README.md  __init__.py  adx.py  aroon.py  atr.py  base.py  bollinger_bands.py  cci.py  donchian.py  ema.py  keltner.py  macd.py  mfi.py  obv.py  roc.py  rsi.py  sar.py  sma.py  stochastic.py  stochrsi.py  supertrend.py  vwap.py  williams_r.py
infrastructure/: .env.example  docker-compose.yml  tradelayout-backtest-api.service
interfaces/: data_reader.py  data_writer.py  order_placer.py
nodes/: __init__.py  base_node.py  entry_signal_node.py  start_node.py
scripts/: backup_clickhouse_to_s3.sh  check_backup_progress.sh  check_clickhouse_data_size.py  check_data_size.sql  restore_clickhouse_from_s3.sh
strategy/: expression_evaluator.py  (+1 more)
(+205 files in other folders)
